--- a/about.html
+++ b/about.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
+   <head>
         <meta charset="UTF-8">
         <meta name="author" content="Harry Bello" >
         <meta name="description" content="Hi i am Harry Bello. This page is about me.">
         <title>About Me</title>
         <link rel="icon" href="HTML5.png">
         <link rel="stylesheet" href="main.css">
-    </head>
+   </head>
 
-    <body>
-        <h1>Hi i am Harry Bello</h1>
-
-        <hr>
-
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat velit voluptatum ratione laudantium officiis voluptas, nostrum necessitatibus est adipisci minima nulla doloribus placeat pariatur numquam, accusantium ut eligendi dolorem explicabo?
-
-       </p>
+   <body>
+      <h1>Hi i am Harry Bello</h1>
 
        <hr>
 
-       <ul>
-          <li>Downlad an <a href="HTML5.png" download>HTML5 favicon</a></li>
-           <li>
-              contact me at <a href="mailto:campbellnaomi12445@gmail.com">my email adddress</a>.
-           </li>
-           <li>
-              Dial <a href="tel:09061274663">my phone number </a>.
-           </li>
-           <li>
-              Open <a href="https://www.google.com/" target="_blank">GOOGLE</a> in a new tab
-           </li>
-       </ul> 
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat velit voluptatum ratione laudantium officiis voluptas, nostrum necessitatibus est adipisci minima nulla doloribus placeat pariatur numquam, accusantium ut eligendi dolorem explicabo?
+
+      </p>
 
        <hr>
-       &lt;&lt;&lt; &copy; <a href="about.html">HARRY BELLO</a>&gt;&gt;&gt;
-       <p>
+
+      <ul>
+         <li>
+            Downlad an <a href="HTML5.png" download>HTML5 favicon</a>
+         </li>
+         <li>
+            contact me at <a href="mailto:campbellnaomi12445@gmail.com">my email adddress</a>.
+         </li>
+         <li>
+            Dial <a href="tel:09061274663">my phone number </a>.
+         </li>
+         <li>
+            Open <a href="https://www.google.com/" target="_blank">GOOGLE</a> in a new tab
+         </li>
+      </ul> 
+
+       <hr>
+      &lt;&lt;&lt; &copy; <a href="about.html">HARRY BELLO</a>&gt;&gt;&gt;
+      <p>
          <a href="/">Back To Home</a>
-       </p>
-    </body>
+      </p>
+   </body>
 
 </html>
